# restoran_parsing

./: .gitignore  LoadData.py  README.md  load_image_from_ya.py  load_image_param_from_ya.py  load_ya_image.py  load_ya_image_params.py  params.json  params.py  pyproject.toml  requirements.txt  run_browser.py  test_load_ya_features.py  unit_test.py
common/: common.py  dict_city.py  my_language_ru_pack.py
data_unit_test/yandex_features/html/: 1004067747.html  1038599331_403.html  1051904212.html  1094622728.html  1094622728.json  190964525978.0.html  44285147668.html
data_unit_test/yandex_features/html/test/: 1004067747.html  1038599331.html  1051904212.html  1094622728.html  1118056242.html  1190590178.html  1227135267.html  1393651891.html  (+4 more)
dict/: validate_map_rest.xlsx
docs/: params.md  request_selenium_with_cookies.md  Алгоритм получения фоток из Яндекс по организациям.md
ta_parser/: headers.txt  headers_search.txt  load_data.py  load_trip_details.py  load_trip_details_all.py  load_trip_search.py  load_trip_search_all.py  select_best_trip_search.py
tables/: tran_yandex_data.xlsx  trip_details.xlsx  zoon_details.xlsx
tests/: load_ya_features_test.py  test_requests.py  unit_test.py
ya_parser/: headers_gallery.txt  headers_raiting.txt  headers_token.txt  load_ya_features.py  load_ya_raiting.py  load_ya_rating.py
zoon_parser/: add_more_category.py  cookie_for_details.txt  cookie_for_search.txt  headers.txt  headers_for_search_by_p.txt  load_data.py  load_zoon_details.py  load_zoon_search.py  map_dict.py  parse_data.py  select_best_zoon_search.py
(+14 files in other folders)
