[tool.poetry]
name = "restoran"
version = "0.1.10"
description = ""
authors = ["alekseikorobov <aleksei_korobov@mail.ru>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "3.9.10"
openpyxl = "3.0.9"
pyarrow = "15.0.0"
transliterate = "^1.10.2"
requests = "2.31.0"
geopy = "^2.4.1"
beautifulsoup4 = "4.12.3"
pandas = "1.1.5"
numpy = "1.24.4"
cloudscraper = "^1.2.71"
selenium = "^4.22.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
pydoc-markdown = "^4.8.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
